@startuml classes

skinparam classFontSize 11
skinparam classAttributeFontSize 10
skinparam ranksep 30
skinparam nodesep 25
skinparam packageStyle rectangle
hide empty members
top to bottom direction

class "Tvec2<T>" {
    -components: T[2]

    +x: T&
    +y: T&

    +Tvec2()
    +Tvec2(copy: Tvec2<T>)
    +Tvec2(_x: T, _y: T)

    +operator=(copy: Tvec2<T>): Tvec2<T>&
    +operator==(rhs: Tvec2<T>): bool
    +operator+(rhs: Tvec2<T>): Tvec2<T>
    +operator-(rhs: Tvec2<T>): Tvec2<T>
    +operator*(scalar: T): Tvec2<T>
    +operator+=(rhs: Tvec2<T>): Tvec2<T>&
    +operator-=(rhs: Tvec2<T>): Tvec2<T>&
    +operator*=(scalar: T): Tvec2<T>&
    +operator[](index: int): T&

    +dot(rhs: Tvec2<T>): T
    +magnitude(): T
    +unit(): Tvec2<T>
}

note right of "Tvec2<T>"
  Typedefs: vec2 = Tvec2<float>, ivec2 = Tvec2<int>
  Tvec2<int> specializations:
    magnitude() uses L1 (Manhattan) norm
    unit() uses integer division by L1 magnitude
end note

class "Tvec3<T>" {
    -components: T[3]

    +x: T&
    +y: T&
    +z: T&

    +Tvec3()
    +Tvec3(copy: Tvec3<T>)
    +Tvec3(_x: T, _y: T, _z: T)
    +Tvec3(other: Tvec3<U>)

    +operator=(copy: Tvec3<T>): Tvec3<T>&
    +operator==(rhs: Tvec3<T>): bool
    +operator+(rhs: Tvec3<T>): Tvec3<T>
    +operator-(rhs: Tvec3<T>): Tvec3<T>
    +operator*(scalar: T): Tvec3<T>
    +operator+=(rhs: Tvec3<T>): Tvec3<T>&
    +operator-=(rhs: Tvec3<T>): Tvec3<T>&
    +operator*=(scalar: T): Tvec3<T>&
    +operator[](index: int): T&

    +dot(rhs: Tvec3<T>): T
    +magnitude(): T
    +unit(): Tvec3<T>
    +cross(rhs: Tvec3<T>): Tvec3<T>
}

note right of "Tvec3<T>"
  Typedefs: vec3 = Tvec3<float>, ivec3 = Tvec3<int>
  Tvec3<int> specializations:
    magnitude() uses L1 (Manhattan) norm
    unit() uses integer division by L1 magnitude
end note

class Screen {
    -{static} MAX_CHANNEL_VALUE: int
    -width: unsigned int
    -height: unsigned int
    -surface: SDL_Surface*

    -plotLineLow(a: ivec2, b: ivec2, color: vec3): void
    -plotLineHigh(a: ivec2, b: ivec2, color: vec3): void
    -crossEdge(a: ivec2, b: ivec2, c: ivec2): int

    +Screen(w: unsigned int, h: unsigned int)
    +\~Screen()

    +blitTo(target: SDL_Surface*): void
    +drawPixel(pos: ivec2, color: vec3): void
    +drawLine(a: ivec2, b: ivec2, color: vec3): void
    +drawLine(a: ivec2, b: ivec2, color: ivec3): void
    +drawBox(a: ivec2, b: ivec2, color: vec3): void
    +drawTriangle(v1: ivec2, v2: ivec2, v3: ivec2, color: vec3): void
}

class Matrix {
    -{static} SIZE: int
    -components: float[3][3]

    +Matrix()
    +Matrix(data: float[3][3])
    +Matrix(copy: Matrix)

    +operator=(copy: Matrix): Matrix&
    +operator*(rhs: Matrix): Matrix
    +operator==(rhs: Matrix): bool
    +toTranspose(): Matrix
}

abstract class GUIElement {
    +{abstract} draw(screen: Screen&): void
    +{abstract} clone(): GUIElement*
    +operator()(event: Event*): bool
    +\~GUIElement()
}

class "Cloneable<Derived>" <<CRTP>> {
    +clone(): GUIElement*
    +cloneDerived(): Derived*
}

note right of "Cloneable<Derived>"
  CRTP base. Derived classes inherit from
  Cloneable<Self> instead of GUIElement directly,
  picking up clone() / cloneDerived() automatically.
  cloneDerived() demonstrates covariant return.
  Free helper: cloneUnique<T>(const T&) -> unique_ptr<T>.
end note

GUIElement <|-- "Cloneable<Derived>"

class Point {
    +pos: vec2
    +color: vec3

    +Point()
    +Point(pos: vec2, color: vec3)
    +draw(screen: Screen&): void
}

class Line {
    +start: vec2
    +end: vec2
    +color: vec3

    +Line()
    +Line(start: vec2, end: vec2, color: vec3)
    +draw(screen: Screen&): void
}

class Box {
    +minPos: vec2
    +maxPos: vec2
    +color: vec3

    +Box()
    +Box(minPos: vec2, maxPos: vec2, color: vec3)
    +draw(screen: Screen&): void
}

class Label {
    -m_text: string
    -m_position: ivec2
    -m_color: vec3

    +Label(text: string, position: ivec2, color: vec3)
    +\~Label()
    +draw(screen: Screen&): void
    +getText(): string
}

class Selection {
    -m_position: ivec2
    -m_label: string
    -m_isSelected: bool
    -{static} m_boxSize: int

    +Selection(position: ivec2, label: string, checked: bool)
    +\~Selection()
    +draw(screen: Screen&): void
    +toggle(): void
    +isSelected(): bool
}

class Image {
    -m_filePath: string
    -m_position: ivec2

    +Image(filePath: string, position: ivec2)
    +\~Image()
    +draw(screen: Screen&): void
    +getFilePath(): string
}

class Button {
    -minPos: ivec2
    -maxPos: ivec2
    -color: vec3
    -soundFile: string
    -targetLayout: string
    -targetLayoutHide: string

    +Button(minP: ivec2, maxP: ivec2, col: vec3, soundFile: string, targetLayout: string, targetLayoutHide: string)
    +\~Button()
    +draw(screen: Screen&): void
    +checkToggle(mouseX: int, mouseY: int): bool
    +operator()(event: Event*): bool
}

class Bar {
    -minPos: ivec2
    -maxPos: ivec2
    -fillColor: vec3
    -bgColor: vec3
    -value: float
    -minVal: float
    -maxVal: float
    -metricName: string

    +Bar(minPos, maxPos, fillColor, bgColor, minVal, maxVal, metricName)
    +setValue(v: float): void
    +getValue(): float
    +getMetricName(): string
    +draw(screen: Screen&): void
}

class Row {
    -minPos: ivec2
    -maxPos: ivec2
    -cells: vector<string>
    -columnWeights: vector<float>
    -textColor: vec3

    +Row(minPos, maxPos, cells, columnWeights, textColor)
    +setCells(cells: vector<string>): void
    +getCells(): vector<string>
    +draw(screen: Screen&): void
}

class SystemMetrics {
    +{static} readCpuPercent(): float
    +{static} readMemPercent(): float
    +{static} topProcesses(n: size_t): vector<ProcessInfo>
}

note right of SystemMetrics
  Static API. Platform impls split:
    SystemMetrics_linux.cpp  (/proc)
    SystemMetrics_mac.cpp    (mach + sysctl + libproc)
    SystemMetrics_win.cpp    (GetSystemTimes + toolhelp)
end note

class ProcessInfo <<struct>> {
    +pid: int
    +name: string
    +cpuPct: float
    +memPct: float
}

enum GUIElementType {
    POINT
    LINE
    BOX
    BAR
    ROW
    LABEL
    BUTTON
}

class GUIElementFactory {
    +{static} createPoint(pos: vec2, color: vec3): unique_ptr<GUIElement>
    +{static} createLine(start: vec2, end: vec2, color: vec3): unique_ptr<GUIElement>
    +{static} createBox(minPos: vec2, maxPos: vec2, color: vec3): unique_ptr<GUIElement>
    +{static} createBar(minPos, maxPos, fillColor, bgColor, minVal, maxVal, metricName): unique_ptr<GUIElement>
    +{static} createRow(minPos, maxPos, cells, columnWeights, textColor): unique_ptr<GUIElement>
    +{static} createLabel(text, pos, color): unique_ptr<GUIElement>
    +{static} createButton(minPos, maxPos, color, soundFile, targetLayout, targetLayoutHide): unique_ptr<GUIElement>
    +{static} create(type: GUIElementType, pos1: vec2, pos2: vec2, color: vec3): unique_ptr<GUIElement>
}

class GUIFile {
    -points: vector<Point>
    -lines: vector<Line>
    -boxes: vector<Box>
    -tokens: vector<string>

    +GUIFile()
    +setPoint(point: Point): void
    +setLine(line: Line): void
    +setBox(box: Box): void
    +getPoints(): vector<Point>
    +getLines(): vector<Line>
    +getBoxes(): vector<Box>
    +readFile(fileName: string, manager: LayoutManager&): void
    +writeFile(fileName: string, manager: LayoutManager&): void
    -splitString(str: string, delim: string): vector<string>
}

class "Tree<T>" {
    -data: T
    -parent: Tree<T>*
    -children: vector<unique_ptr<Tree<T>>>

    +Tree(data: T)

    +getData(): T&
    +getParent(): Tree<T>*
    +isRoot(): bool
    +isLeaf(): bool
    +getChildren(): vector<unique_ptr<Tree<T>>>&
    +addChild(childData: T): Tree<T>*
}

class Layout {
    -start: vec2
    -end: vec2
    -active: bool
    -name: string
    -elements: vector<unique_ptr<GUIElement>>

    +Layout(start: vec2, end: vec2, active: bool, name: string)
    +Layout(other: const Layout&)
    +operator=(other: const Layout&): Layout&

    +addElement(element: unique_ptr<GUIElement>): void
    +setActive(active: bool): void
    +isActive(): bool
    +setName(name: string): void
    +getName(): string
    +getStart(): vec2
    +getEnd(): vec2

    +resolveAbsStart(parentStart: ivec2, parentEnd: ivec2): ivec2
    +resolveAbsEnd(parentStart: ivec2, parentEnd: ivec2): ivec2
    +draw(screen: Screen&, parentStart: ivec2, parentEnd: ivec2): void
}

note right of Layout
  start/end are relative (0.0–1.0) to parent.
  draw() is a no-op when active == false.
  Copy ctor + operator= deep-clone each child
  via GUIElement::clone() (CRTP via Cloneable).
end note

class LayoutManager {
    -root: Tree<Layout>

    -LayoutManager()
    -{static} renderTree(node: Tree<Layout>&, screen: Screen&, parentStart: ivec2, parentEnd: ivec2): void

    +{static} getInstance(): LayoutManager&
    +getRoot(): Tree<Layout>&
    +addChild(parent: Tree<Layout>*, layout: Layout): Tree<Layout>*
    +render(screen: Screen&, screenStart: ivec2, screenEnd: ivec2): void
}

note right of LayoutManager
  Singleton. Owns the root Tree<Layout>.
  render() traverses the tree using
  painter's algorithm (parent before children).
end note

GUIElement <|-- Point
GUIElement <|-- Line
GUIElement <|-- Box
GUIElement <|-- Label
GUIElement <|-- Selection
GUIElement <|-- Image
GUIElement <|-- Button
GUIElement <|-- Bar
GUIElement <|-- Row

SystemMetrics ..> ProcessInfo : produces

GUIElementFactory ..> GUIElement : creates
GUIElementFactory ..> GUIElementType : uses

GUIFile *-- Point
GUIFile *-- Line
GUIFile *-- Box

Layout o-- GUIElement : contains
"Tree<T>" *-- "Tree<T>" : children

enum EventType {
    EVENT_CLICK
    EVENT_SHOW
    EVENT_SOUND
}

abstract class Event {
    #type: EventType

    +Event(type: EventType)
    +\~Event()
    +getType(): EventType
}

class ClickEvent {
    -mouseX: int
    -mouseY: int

    +ClickEvent(mouseX: int, mouseY: int)
    +getMouseX(): int
    +getMouseY(): int
}

class ShowEvent {
    -layoutName: string
    -show: bool

    +ShowEvent(layoutName: string, show: bool)
    +getLayoutName(): string
    +getShow(): bool
}

class SoundEvent {
    -filePath: string

    +SoundEvent(filePath: string)
    +getFilePath(): string
}

class EventManager {
    -eventQueue: queue<unique_ptr<Event>>

    -EventManager()
    -{static} trickleEvent(node: Tree<Layout>&, event: Event*, parentStart: ivec2, parentEnd: ivec2): bool
    -{static} findLayoutByName(node: Tree<Layout>&, name: string): Tree<Layout>*

    +{static} getInstance(): EventManager&
    +pushEvent(event: unique_ptr<Event>): void
    +processEvents(screenStart: ivec2, screenEnd: ivec2): void
}

class SoundPlayer {
    -stream: SDL_AudioStream*

    -SoundPlayer()

    +\~SoundPlayer()
    +{static} getInstance(): SoundPlayer&
    +play(filePath: string): void
}

class ThreadPool {
    -workers: vector<thread>
    -tasks: queue<function<void()>>
    -queueMutex: mutex
    -cv: condition_variable
    -stop: bool

    -ThreadPool()

    +\~ThreadPool()
    +{static} getInstance(): ThreadPool&
    +threadCount(): size_t
    +submit<F>(f: F): future<void>
}

note right of ThreadPool
  Singleton. Worker count = hardware_concurrency.
  Used by Screen::drawBox / drawTriangle to parallelize
  pixel fills across rows. Copy + assignment deleted.
end note

Event <|-- ClickEvent
Event <|-- ShowEvent
Event <|-- SoundEvent

Event *-- EventType

EventManager ..> Event : processes
EventManager ..> LayoutManager : accesses
EventManager ..> SoundPlayer : delegates sound

GUIElement ..> Event : consumes

LayoutManager *-- "Tree<T>" : root
LayoutManager ..> Layout : manages
LayoutManager ..> Screen : renders to

Screen ..> ThreadPool : parallelizes drawBox/drawTriangle

@enduml
